--- a/main.html
+++ b/main.html
@@ -17,11 +17,11 @@
         <ul>
             <li class="nav-logo"><a class="logo" href="#logo"> logo</a></li>
 
-            <li><a href="#home">Home</a></li>
-            <li><a href="#creators">Creators</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#social">Social</a></li>
+            <li><a class="otions" href="#home">Home</a></li>
+            <li><a class="otions" href="#creators">Creators</a></li>
+            <li><a class="otions" href="#about">About</a></li>
+            <li><a class="otions" href="#contact">Contact</a></li>
+            <li><a class="otions" href="#social">Social</a></li>
 
             <li class="nav-search"><span class="material-symbols-outlined">
                     search
@@ -47,7 +47,14 @@
             <br>
         </div>
 
-        <div class="item list">
+        <div class="item_list">
+            <br>
+            <p class="item">Item 000</p>
+            <p>Buy this by</p>
+            <p>clicking below.</p>
+
+            <button>shop now</button>
+
 
             
         </div>
