--- a/main.html
+++ b/main.html
@@ -17,11 +17,11 @@
         <ul>
             <li class="nav-logo"><a class="logo" href="#logo"> logo</a></li>
 
-            <li><a class="otions" href="#home">Home</a></li>
-            <li><a class="otions" href="#creators">Creators</a></li>
-            <li><a class="otions" href="#about">About</a></li>
-            <li><a class="otions" href="#contact">Contact</a></li>
-            <li><a class="otions" href="#social">Social</a></li>
+            <li><a class="options" href="#home">Home</a></li>
+            <li><a class="options" href="#creators">Creators</a></li>
+            <li><a class="options" href="#about">About</a></li>
+            <li><a class="options" href="#contact">Contact</a></li>
+            <li><a class="options" href="#social">Social</a></li>
 
             <li class="nav-search"><span class="material-symbols-outlined">
                     search
@@ -37,7 +37,8 @@
         <div class="customer-testimonials">
             <h2>Customer Testimonials</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Velit nemo enim, rerum distinctio culpa labore adipisci omnis officia vero,</p> <p>
+                Velit nemo enim, rerum distinctio culpa labore adipisci omnis officia vero,</p>
+            <p>
                 similique deleniti deserunt ea praesentium qui! Laudantium amet cum labore.</p>
         </div>
 
@@ -54,9 +55,35 @@
             <p>clicking below.</p>
 
             <button>shop now</button>
+            <div class="square"></div>
 
+            <br><br><br><br><br>
+            <br><br><br><br>
+            <br><br><br><br><br>
+            <br>
+            <div class="list_left">
+                <p class="item1">Item 001</p>
+                <p>Buy this by</p>
+                <p>clicking below.</p>
 
-            
+                <button class="b1">shop now</button>
+            </div>
+            <div class="square1"></div>
+            <br>
+
+            <p class="item">Item 002</p>
+            <p>Buy this by</p>
+            <p>clicking below.</p>
+
+            <button>shop now</button>
+            <div class="square"></div>
+        </div>
+
+        <div class="footer">
+            <br>
+            <p class="header">Lorem ipsum dolor sit amet consectetur.</p>
+
+            <p class="end">Footer 001 | Footer 002 | Foooter 003</p>
         </div>
     </body>
 </main>
